<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_emails_enviados">Enviados</string>
    <string name="menu_outros">Outros</string>
    <string name="menu_lixeira">Lixeira</string>
    <string name="menu_spam">Spam</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
</resources>
